data/derived/sp14/progs/unify/prog1174.ml.out
Characters 88-89:
  List.fold_left f base fs;;
                 ^
Error: This expression has type ('a -> 'b) -> 'c -> ('c -> 'a) -> 'b
       but an expression was expected of type ('a -> 'b) -> 'c -> 'a -> 'b
       The type variable 'a occurs inside 'c -> 'a
